# Bullseye

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  bullseyeindexservice.proto  index_calculator_client.cc
bullseyeindexbroadcast/: CMakeLists.txt  bullseyeindexbroadcast.cc
bullseyeindexservice/: CMakeLists.txt  bullseyeindexservice.proto  index_calculator_client.cc  index_calculator_server.cc
bullseyeindexsupervisor/: CMakeLists.txt  bullseyeindexsupervisor.proto  index_supervisor_client.cc  index_supervisor_server.cc
bullseyestockbroadcast/: CMakeLists.txt  bullseyestockbroadcast.cc
bullseyestockexternal/: CMakeLists.txt  bullseyestockexternal.proto  stock_external_client.cc  stock_external_server.cc
bullseyestockmatching/: CMakeLists.txt  bullseyestockmatching.proto  stock_matching_client.cc  stock_matching_server.cc
bullseyestockpercentage/: CMakeLists.txt  stock_percentage_divider.cc
bullseyestocksimulation/: CMakeLists.txt  stock_simulator.cc
